# scripts

database/migrations/mikoyan/: Cargo.toml  README.md
database/migrations/mikoyan/src/: clapper.rs  db.rs  main.rs  normalize.rs  record.rs
database/migrations/mikoyan/src/convert/: completed_challenge.rs  completed_exam.rs  exam_results.rs  partially_completed_challenge.rs  saved_challenge.rs  user.rs
database/migrations/shredder/: Cargo.toml
database/migrations/shredder/src/: main.rs
database/migrations/shredder/src/convert/: mod.rs
database/migrations/shredder/src/utils/: mod.rs  no_option.rs
database/utils/seed/: Cargo.toml
database/utils/seed/src/: main.rs
