[package]
name = "mikoyan"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
cmp = "0.1.1"
indicatif = "0.17.8"
futures-util = "0.3.31"
mongodb = "3.1.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs", "signal"] }
